<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fstTxt"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/top_text"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView android:id="@+id/TextViewButton1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="start"
            android:layout_marginStart="180dp"
            android:text="@string/txtTextView1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/txtButton1"
            android:textSize="11sp"
            android:textStyle="normal"
            android:textAlignment="center"
            android:onClick="processButton1"
            tools:ignore="RtlCompat" />

        <TextView android:id="@+id/TextViewButton2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="180dp"
            android:layout_gravity="start"
            android:layout_marginStart="180dp"
            android:text="@string/txtTextView2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="180dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/txtButton2"
            android:textSize="11sp"
            android:textStyle="normal"
            android:textAlignment="center"
            android:onClick="processButton2"
            tools:ignore="RtlCompat" />

        <Switch
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="280dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/txtSwitch1"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>
</ScrollView>